# formations

./: README.md  install.sh
assets/: cthulu-walk.xcf  digger-walk.xcf  dracula-walk-down.xcf  dracula-walk-up.xcf  dracula.xcf  ground.xcf  monsters.xcf  player2-sword.xcf  werewolf-walk-down.xcf  werewolf-walk-up-2.xcf  werewolf-walk-up-3.xcf  werewolf-walk-up-4.xcf  werewolf-walk-up-5.xcf  werewolf-walk-up.xcf
src/: CMakeCache.txt  CMakeLists.txt  Makefile  assets.c  assets.h  build.sh  cmake_install.cmake  common.c  common.h  enemy.c  enemy.h  graveyard  hud.c  hud.h  input.c  input.h  main.c  npc.c  npc.h  player.c  player.h  renderer.c  renderer.h  scene.c  scene.h  squad.c  squad.h
src/assets/: digger-walk.xcf  player.xcf  player2.xcf  werewolf-walk.xcf
